Fixed alignment of navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,8 +9,14 @@ body {
   margin: 0px;
   gap: 16px;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   padding: 8px;
+  .navbar-left {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 16px;
+  }
   .is-grouped {
     display: flex;
     flex-direction: row;
